Refactor XML layouts and add documentation for improved maintainability

--- a/app/src/main/res/raw/msg_terms_condition.html
+++ b/app/src/main/res/raw/msg_terms_condition.html
@@ -90,7 +90,7 @@
         <br />
         <h2>9. Contact Information</h2>
         <p>If you have any questions about these terms and conditions, please contact us at
-            <a href="mailto:mv123labs@hotmail.com">mv123labs@hotmail.com</a>.
+            <a href="mailto:shiba.spj@hotmail.com">shiba.spj@hotmail.com</a>.
         </p>
     </body>
 </html>
